[gd_scene load_steps=14 format=2]

[ext_resource path="res://Graphics/TestGraphics/TestPlayer.png" type="Texture" id=1]
[ext_resource path="res://Prefabs/FPS_counter.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/Player/Player.gd" type="Script" id=3]
[ext_resource path="res://Prefabs/Shooting.tscn" type="PackedScene" id=4]
[ext_resource path="res://Graphics/Fonts/Lato-Bold.ttf" type="DynamicFontData" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3.44471, 2.46413 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.929412, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.207843, 0.196078, 0.196078, 1 )

[sub_resource type="DynamicFont" id=4]
size = 8
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.203922, 0.34902, 0.611765, 1 )

[sub_resource type="DynamicFont" id=6]
size = 6
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=7]
size = 9
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 4.32675, 9.24269 )

[node name="Player" type="KinematicBody2D" groups=[
"Player",
]]
script = ExtResource( 3 )
__meta__ = {
"_edit_horizontal_guides_": [ 148.048 ]
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -6 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.265163, -0.390604 )
shape = SubResource( 1 )

[node name="Canvas" type="CanvasLayer" parent="."]

[node name="FPS_counter" parent="Canvas" instance=ExtResource( 2 )]
margin_left = 73.5367
margin_top = 0.296003
margin_right = 113.537
margin_bottom = 14.296

[node name="HealthBar" type="ProgressBar" parent="Canvas"]
margin_left = 3.0
margin_top = 3.0
margin_right = 72.0
margin_bottom = 12.0
custom_styles/fg = SubResource( 2 )
custom_styles/bg = SubResource( 3 )
value = 50.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Canvas/HealthBar"]
margin_top = -1.0
margin_right = 70.0
margin_bottom = 10.0
custom_fonts/font = SubResource( 4 )
text = "100"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ManaBar" type="ProgressBar" parent="Canvas"]
margin_left = 3.0
margin_top = 12.0
margin_right = 67.0
margin_bottom = 18.0
custom_styles/fg = SubResource( 5 )
custom_styles/bg = SubResource( 3 )
value = 50.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Canvas/ManaBar"]
margin_top = -1.0
margin_right = 64.0
margin_bottom = 8.0
custom_fonts/font = SubResource( 6 )
text = "100"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Canvas"]
margin_left = 3.0
margin_top = 19.0
margin_right = 66.0
margin_bottom = 33.0
custom_fonts/font = SubResource( 7 )
text = "Level: 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeathInterface" type="Control" parent="Canvas"]
margin_right = 384.0
margin_bottom = 216.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shooting" parent="." instance=ExtResource( 4 )]
position = Vector2( 0.529739, -10.092 )

[node name="point" parent="Shooting" index="0"]
position = Vector2( 7.625, 0 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.5, 0.5 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 7
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -6 )
shape = SubResource( 8 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]

[editable path="Shooting"]
